--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ li{
     }
     
     #toggle1:checked ~ .menu1 {
-      height: 400px;
+      height: 300px;
     }
     
     
@@ -236,7 +236,6 @@ li{
       margin: 20px;
       display: -ms-grid;
       display: grid;
-      grid-template-rows: 1fr repeat(4, 0.5fr);
       padding: 0;
       list-style: none;
       overflow: hidden;
@@ -250,11 +249,9 @@ li{
     }
     
     .menu1 a:first-child {
-      margin-top: 2rem;
     }
     
     .menu1 a:last-child {
-      margin-bottom: 2rem;
     }
     
     .link1 {
